--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "webtech2024",
   "version": "1.0.0",
+  "description": "Webshop project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "Takács Ákos VTJ4ES",
+  "author": "Takács Ákos",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "moment": "^2.24.0",
-    "mongodb": "^3.7.4",
-    "uuid": "^7.0.3"
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.12.3",
+    "uuid": "^8.3.2"
   }
 }
